# starlette_mcp_sse

./: .gitignore  README.md  README.zh-CN.md  docker-compose.yaml  main.py  pyproject.toml  routes.py  server.py
.devcontainer/: Dockerfile  devcontainer.json
mcp_client/: Dockerfile  pyproject.toml
mcp_client/src/: client.py
mcp_server/: Dockerfile  pyproject.toml
src/: routes.py
